# DesignPatterns

./: .gitignore  Cargo.toml  README.md  index.md
Python/p01_principles/: other_principles.ipynb
Python/p02_creational/: overview.md
Python/p03_structural_patterns/: structural_patterns.md
Python/p04_behavioral_patterns/: behavioral_patterns.md
Rust/p01_creational/: abstract_factory.rs  builder.rs  factory.rs  object_pool.rs  prototype.rs  singleton.rs
Rust/p01_creational_patterns/: builder.rs  factory.rs  object_pool.rs  prototype.rs  singleton.rs
Rust/p02_structural/: adapter.rs  bridge.rs
