bin = [
    { name = "factory", path = "Rust/p01_creational_patterns/factory.rs" },
    { name = "builder", path = "Rust/p01_creational_patterns/builder.rs" },
    { name = "object_pool", path = "Rust/p01_creational_patterns/object_pool.rs" },
    { name = "singleton", path = "Rust/p01_creational_patterns/singleton.rs" },
]

[package]
name = "DesignPatterns"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
