bin = [
    { name = "factory", path = "Rust/p01_creational/factory.rs" },
    { name = "builder", path = "Rust/p01_creational/builder.rs" },
    { name = "object_pool", path = "Rust/p01_creational/object_pool.rs" },
    { name = "singleton", path = "Rust/p01_creational/singleton.rs" },
    { name = "prototype", path = "Rust/p01_creational/prototype.rs" },
    { name = "abstract_factory", path = "Rust/p01_creational/abstract_factory.rs" },
]

[package]
name = "DesignPatterns"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
